[package]
name = "marker"
version = "1.0.2"
edition = "2024"

[dependencies]
hyper = "1.10.1"
jsonrpsee = { version = "0.26.0", features = ["macros", "server"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = "1.0.228"
tokio = "1.52.3"
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
